--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,8 +118,8 @@ jobs:
                   -e "s/- gxx_linux-64/# - gxx_linux-64/" \
                   -e "s/- nvcc_linux-64/# - nvcc_linux-64/" \
                   -e "s/- sysroot_linux-64/# - sysroot_linux-64/" \
-                  -e "s/- python/- python ${{ matrix.python }}.*/" \
-                  -e "s/- pytorch-gpu/- pytorch-cpu ${{ matrix.pytorch }}/" \
+                  -e "s/- python 3.10.\*/- python ${{ matrix.python }}.*/" \
+                  -e "s/- pytorch-gpu 2.0.\*/- pytorch-cpu ${{ matrix.pytorch }}/" \
                   environment.yml
     - name: Show dependency file
       run: cat environment.yml
