--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,46 +23,46 @@ jobs:
         include:
 
           # Oldest supported versions
-#          - name: Linux (CUDA 10.2, Python 3.8, PyTorch 1.11)
-#            os: ubuntu-18.04
-#            enable_cuda: true
-#            cuda: "10.2.89"
-#            gcc: "8.5.*"
-#            nvcc: "10.2"
-#            python: "3.8.*"
-#            torchani: "2.2.*"
-#            pytorch: "1.11.*"
-#
-#          # Older supported versions
-#          - name: Linux (CUDA 11.2, Python 3.9, PyTorch 1.12)
-#            os: ubuntu-18.04
-#            enable_cuda: true
-#            cuda: "11.2.2"
-#            gcc: "10.3.*"
-#            nvcc: "11.2"
-#            python: "3.9.*"
-#            torchani: "2.2.*"
-#            pytorch: "1.12.*"
-#
-#          # Latest supported versions (with CUDA)
-#          - name: Linux (CUDA 11.8, Python 3.10, PyTorch 2.0)
-#            os: ubuntu-18.04
-#            enable_cuda: true
-#            cuda: "11.8.0"
-#            gcc: "10.3.*"
-#            nvcc: "11.8"
-#            python: "3.10.*"
-#            torchani: "2.2.*"
-#            pytorch: "2.0.*"
-#
-#          # Latest supported versions (without CUDA)
-#          - name: Linux (no CUDA, Python 3.10, PyTorch 2.0)
-#            os: ubuntu-18.04
-#            enable_cuda: false
-#            gcc: "10.3.*"
-#            python: "3.10.*"
-#            pytorch: "2.0.*"
-#            torchani: "2.2.*"
+          - name: Linux (CUDA 10.2, Python 3.8, PyTorch 1.11)
+            os: ubuntu-18.04
+            enable_cuda: true
+            cuda: "10.2.89"
+            gcc: "8.5.*"
+            nvcc: "10.2"
+            python: "3.8.*"
+            torchani: "2.2.*"
+            pytorch: "1.11.*"
+
+          # Older supported versions
+          - name: Linux (CUDA 11.2, Python 3.9, PyTorch 1.12)
+            os: ubuntu-18.04
+            enable_cuda: true
+            cuda: "11.2.2"
+            gcc: "10.3.*"
+            nvcc: "11.2"
+            python: "3.9.*"
+            torchani: "2.2.*"
+            pytorch: "1.12.*"
+
+          # Latest supported versions (with CUDA)
+          - name: Linux (CUDA 11.8, Python 3.10, PyTorch 2.0)
+            os: ubuntu-18.04
+            enable_cuda: true
+            cuda: "11.8.0"
+            gcc: "10.3.*"
+            nvcc: "11.8"
+            python: "3.10.*"
+            torchani: "2.2.*"
+            pytorch: "2.0.*"
+
+          # Latest supported versions (without CUDA)
+          - name: Linux (no CUDA, Python 3.10, PyTorch 2.0)
+            os: ubuntu-18.04
+            enable_cuda: false
+            gcc: "10.3.*"
+            python: "3.10.*"
+            pytorch: "2.0.*"
+            torchani: "2.2.*"
 
           # Intel Mac
           - name: Mac Intel (no CUDA, Python 3.10, PyTorch 2.0)
