Set CUDA standard too

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,9 +36,15 @@ add_library(${LIBRARY} SHARED ${SRC_FILES})
 message(STATUS "Found Torch: ${Torch_VERSION}")
 if(${Torch_VERSION} VERSION_GREATER_EQUAL "2.1.0")
     set(CMAKE_CXX_STANDARD 17)
+    if(ENABLE_CUDA)
+      set(CMAKE_CUDA_STANDARD 17)
+    endif(ENABLE_CUDA)
     message(STATUS "Setting C++ standard to C++17")
 else()
     set(CMAKE_CXX_STANDARD 14)
+    if(ENABLE_CUDA)
+      set(CMAKE_CUDA_STANDARD 14)
+    endif(ENABLE_CUDA)
     message(STATUS "Setting C++ standard to C++14")
 endif()
 
