--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,14 +43,14 @@ jobs:
             pytorch: "1.12.*"
 
           # Latest supported versions (with CUDA)
-          - name: Linux (CUDA 11.8, Python 3.10, PyTorch 2.0)
+          - name: Linux (CUDA 12, Python 3.11, PyTorch 2.1)
             enable_cuda: true
-            cuda: "11.8.0"
-            gcc: "10.3.*"
-            nvcc: "11.8"
-            python: "3.10.*"
+            cuda: "12.2.0"
+            gcc: "11.*"
+            nvcc: "12.*"
+            python: "3.11.*"
             torchani: "2.2.*"
-            pytorch: "2.0.*"
+            pytorch: "2.1.*"
 
           # Latest supported versions (without CUDA)
           - name: Linux (no CUDA, Python 3.10, PyTorch 2.0)
