--- a/.github/workflows/ci-cuda12.yml
+++ b/.github/workflows/ci-cuda12.yml
@@ -26,7 +26,6 @@ jobs:
             enable_cuda: true
             cuda: "12.*"
             gcc: "11.*"
-            nvcc: "12.*"
             python: "3.11.*"
             torchani: "2.2.*"
             pytorch: "2.1.*"
@@ -46,9 +45,9 @@ jobs:
       if: ${{ matrix.enable_cuda }}
       run: |
         sed -i -e "/cudatoolkit/c\  - cuda ${{ matrix.cuda }}" \
-               -e "/gxx_linux-64/c\  - gxx_linux-64 ${{ matrix.gcc }}" \
+               -e "/gxx_linux-64/c\  - gxx ${{ matrix.gcc }}" \
                -e "/torchani/c\  - torchani ${{ matrix.torchani }}" \
-               -e "/nvcc_linux-64/c\  - nvcc_linux-64 ${{ matrix.nvcc }}" \
+               -e "/nvcc_linux-64/d" \
                -e "/python/c\  - python ${{ matrix.python }}" \
                -e "/pytorch-gpu/c\  - pytorch-gpu ${{ matrix.pytorch }}" \
                environment.yml
