--- a/.github/workflows/ci-cuda12.yml
+++ b/.github/workflows/ci-cuda12.yml
@@ -23,7 +23,6 @@ jobs:
         include:
           # Latest supported versions (with CUDA)
           - name: Linux (CUDA 12, Python 3.11, PyTorch 2.1)
-            enable_cuda: true
             cuda: "12"
             gcc: "11.*"
             python: "3.11.*"
@@ -42,7 +41,6 @@ jobs:
         miniforge-variant: Mambaforge
 
     - name: Prepare dependencies (with CUDA)
-      if: ${{ matrix.enable_cuda }}
       run: |
         sed -i -e "/cudatoolkit/c\  - cuda ${{ matrix.cuda }}" \
                -e "/gxx_linux-64/c\  - gxx ${{ matrix.gcc }}" \
@@ -56,7 +54,10 @@ jobs:
       run: cat environment.yml
 
     - name: Install dependencies
-      run: CONDA_OVERRIDE_CUDA=${{ matrix.nvcc }} mamba env create -n nnpops -f environment.yml
+      run: mamba env create -n nnpops -f environment.yml
+      env:
+        # Needed to install pytorch-gpu on a machine without a GPU
+        CONDA_OVERRIDE_CUDA: ${{ matrix.cuda }}
 
     - name: List conda environment
       run: |
