Update CI version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,26 +23,6 @@ jobs:
         include:
 
           # Oldest supported versions
-          - name: Linux (CUDA 10.2, Python 3.8, PyTorch 1.11)
-            enable_cuda: true
-            cuda: "10.2.89"
-            gcc: "8.5.*"
-            nvcc: "10.2"
-            python: "3.8.*"
-            torchani: "2.2.*"
-            pytorch: "1.11.*"
-
-          # Older supported versions
-          - name: Linux (CUDA 11.2, Python 3.9, PyTorch 1.12)
-            enable_cuda: true
-            cuda: "11.2.2"
-            gcc: "10.3.*"
-            nvcc: "11.2"
-            python: "3.9.*"
-            torchani: "2.2.*"
-            pytorch: "1.12.*"
-
-          # Latest supported versions (with CUDA)
           - name: Linux (CUDA 11.8, Python 3.10, PyTorch 2.0)
             enable_cuda: true
             cuda: "11.8.0"
@@ -52,13 +32,24 @@ jobs:
             torchani: "2.2.*"
             pytorch: "2.0.*"
 
+          # Latest supported versions (with CUDA)
+          - name: Linux (CUDA 12, Python 3.13, PyTorch 2.5)
+            enable_cuda: true
+            cuda: "12.*"
+            gcc: "10.3.*"
+            nvcc: "12.*"
+            python: "3.13.*"
+            torchani: "2.2.*"
+            pytorch: "2.5.*"
+
           # Latest supported versions (without CUDA)
-          - name: Linux (no CUDA, Python 3.10, PyTorch 2.0)
+          - name: Linux (no CUDA, Python 3.13, PyTorch 2.5)
             enable_cuda: false
             gcc: "10.3.*"
-            python: "3.10.*"
-            pytorch: "2.0.*"
+            nvcc: "12.*"
+            python: "3.13.*"
             torchani: "2.2.*"
+            pytorch: "2.5.*"
 
     steps:
     - name: Check out
@@ -72,11 +63,12 @@ jobs:
       if: ${{ matrix.enable_cuda }}
 
     - name: Install Miniconda
-      uses: conda-incubator/setup-miniconda@v2
+      uses: conda-incubator/setup-miniconda@v3
       with:
         activate-environment: ""
         auto-activate-base: true
-        miniforge-variant: Mambaforge
+        miniforge-variant: Miniforge3
+        use-mamba: true
 
     - name: Prepare dependencies (with CUDA)
       if: ${{ matrix.enable_cuda }}
