--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
           - name: Linux (CUDA 11.8, Python 3.10, PyTorch 2.0)
             enable_cuda: true
             cuda: "11.8.0"
+            cuda_version: "11.8"
             gcc: "10.3.*"
             nvcc: "11.8"
             python: "3.10.*"
@@ -36,6 +37,7 @@ jobs:
           - name: Linux (CUDA 12, Python 3.13, PyTorch 2.5)
             enable_cuda: true
             cuda: "12.6.0"
+            cuda_version: "12.6"
             gcc: "10.3.*"
             nvcc: "12.*"
             python: "3.13.*"
@@ -71,7 +73,7 @@ jobs:
                -e "/torchani/c\  - torchani ${{ matrix.torchani }}" \
                -e "/python/c\  - python ${{ matrix.python }}" \
                -e "/pytorch-gpu/c\  - pytorch-gpu ${{ matrix.pytorch }}" \
-               -e "/cuda-version/c\  - cuda-version ${{ matrix.cuda }}" \
+               -e "/cuda-version/c\  - cuda-version ${{ matrix.cuda_version }}" \
                environment.yml
 
     - name: Show dependency file
