add config for pytest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,15 @@ dependencies = ["torch==2.5.1.*"]
 
 [tool.setuptools.packages.find]
 where = [""]
-include = ["NNPops*"]
+include = ["NNPOps*"]
 namespaces = false
 
 [build-system]
 requires = ["setuptools>=64", "setuptools-scm>=8", "torch==2.5.1.*"]
 build-backend = "setuptools.build_meta"
+
+[tool.pytest.ini_options]
+python_files = "*.py"
+python_classes = "_Test"
+python_functions = "test*"
+norecursedirs = "test-data"
